# BackEnd-Hotelaria

./: README.md  pyproject.toml
config/: settings.py  urls.py
hotelaria/: admin.py  models.py  serializers.py  views.py
hotelaria/migrations/: 0001_initial.py  0002_alter_funcionario_cpf.py  0002_reserva_pagamento.py  0003_pagamento_data_reserva_data.py  0003_tipoquarto_quarto.py  0004_alter_pagamento_data_alter_reserva_data.py  0005_reserva_noites_alter_pagamento_data_and_more.py  0006_alter_reserva_data.py  0007_hospede_cpf_alter_pagamento_data.py  0008_alter_hospede_cpf.py  0009_pagamento_valor.py  0010_alter_pagamento_data_alter_pagamento_valor_and_more.py  0011_merge_20250704_1040.py  0012_quarto_reserva.py  0013_reserva_servico.py  0014_remove_reserva_servico_reserva_servico.py  0015_alter_reserva_servico.py
