[project]
name = "BackEnd-Hotelaria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "erickChavesFiamoncini", email = "erickechaves@gmail.com"},
    {name = "gustavoalvhnr", email = "gustavoalves.ho@gmail.com"},
]
dependencies = [
    "django>=4.2.23",
    "djangorestframework>=3.16.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
